--- a/index.html
+++ b/index.html
@@ -5,8 +5,132 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First assignment</title>
+    <!-- google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&family=Work+Sans:wght@200;400;600;700&display=swap" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&family=Work+Sans:wght@200;400;700&display=swap" rel="stylesheet">
+     <!-- end -->
+     <!-- font awesome link -->
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+     <!-- end -->
+     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello world</h1>
+    <header class="header">
+        <div class="header-content">
+            <h1 class="header-title">All Thinks Are <br>
+                Possible If You <br> believe</h1>
+            <p class="header-description">There are many variations of passages of Lorem Ipsum <br> available, but the majority have suffered alteration in some <br> form, by injected humour, or randomised words</p>
+            <button class="header-btn">Contact Us</button>
+        </div>
+    </header>
+    <main>
+        <!-- My failures start -->
+        <section class="fail-container">
+            <div class="fail-img">
+                <img src="images/person.png" alt="">
+            </div>
+            <dev class="fail-content">
+                <h1 class="section-title">My failures of previous year</h1>
+                <p class="fail-description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+                <div class="fail-item-container">
+                    <ul class="fail-list">
+                        <li class="fail-item"><i class="fa-solid fa-check"></i>Contrary to popular belief, is not simply.</li>
+                        <li class="fail-item"><i class="fa-solid fa-check"></i>Contrary to popular belief.</li>
+                        <li class="fail-item"><i class="fa-solid fa-check"></i>Contrary to popular , is not simply.</li>
+                        <li class="fail-item"><i class="fa-solid fa-check"></i>Contrary to popular belief, is not simply.</li>
+                        <li class="fail-item"><i class="fa-solid fa-check"></i>Contrary to popular simply.</li>
+                        <li class="fail-item"><i class="fa-solid fa-check"></i>Contrary to popular belief.</li>
+                    </ul>
+                </div>
+            </dev>
+        </section>
+        <!-- My failures end -->
+
+        <!-- My skills start -->
+        <section class="skills-container">
+            <h1 class="section-title">My Skills</h1>
+            <div class="skills-content">
+                <div class="skills">
+                    <img src="images/icons/html-5.png" alt="#" class="skill-img">
+                    <h3 class="skill-name">Html</h3>
+                    <p class="skill-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis repudiandae quo voluptate. Qui, repudiandae impedit. Lorem ipsum dolor sit amet consectetur adipisicing voluptate repudiandae impedit.</p>
+                </div>
+                <div class="skills">
+                    <img src="images/icons/css-3.png" alt="#" class="skill-img">
+                    <h3 class="skill-name">CSS</h3>
+                    <p class="skill-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis repudiandae quo voluptate. Qui, repudiandae impedit. Lorem ipsum dolor sit amet consectetur adipisicing voluptate repudiandae impedit.</p>
+                </div>
+                <div class="skills">
+                    <img src="images/icons/java-script.png" alt="#" class="skill-img">
+                    <h3 class="skill-name">Java script</h3>
+                    <p class="skill-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis repudiandae quo voluptate. Qui, repudiandae impedit. Lorem ipsum dolor sit amet consectetur adipisicing voluptate repudiandae impedit.</p>
+                </div>
+            </div>
+        </section>
+        <!-- My skills end -->
+
+        <!-- my plan star -->
+        <section class="My-plan">
+            <h1 class="section-title">My plans</h1>
+            <div class="my-plan-container">
+                <div class="my-plan-card">
+                    <img src="images/icons/web.png" alt="#">
+                    <h2 class="card-title">Web Development</h2>
+                    <p class="card-description">I want to start</p>
+                </div>
+                <div class="my-plan-card">
+                    <img src="images/icons/js.png" alt="#">
+                    <h2 class="card-title">Javascript</h2>
+                    <p class="card-description">I want to learn</p>
+                </div>
+                <div class="my-plan-card">
+                    <img src="images/icons/smoke.png" alt="#">
+                    <h2 class="card-title">Smoking Habit</h2>
+                    <p class="card-description">I want to end</p>
+                </div>
+                <div class="my-plan-card">
+                    <img src="images/icons/ecom.png" alt="#">
+                    <h2 class="card-title">ecommerce</h2>
+                    <p class="card-description">I want to develop</p>
+                </div>
+            </div>
+        </section>
+        <!-- my plan end -->
+
+        <!-- call now start -->
+        <section class="call-now">
+            <div class="call-now-content">
+                <h1 class="call-now-title">Awlays keep a positive
+                    <br> mindset</h1>
+                    <button class="primary-btn">Call Now</button>
+            </div>
+        </section>
+        <!-- call now end -->
+    </main>
+    <!-- Footer start -->
+    <footer class="footer">
+        <section class="footer-container">
+            <div class="future">
+                <h1 class="section-title">Future</h1>
+                <p class="future-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+                <p class="future-email">Email : info@gmail.com</p>
+                <p class="future-phone">Phone : 01872216507</p>
+                <div class="future-icons">
+                    <img class="future-icon" src="images/icons/fb.png" alt="#">
+                    <img class="future-icon" src="images/icons/twitter.png" alt="#">
+                    <img class="future-icon" src="images/icons/youtube.png" alt="#">
+                </div>
+            </div>
+            <div class="subscribe">
+                <h2 class="subscribe-title">Subscribe</h2>
+                <input class="subscribe-input" type="email" name="email" id="email" placeholder="Enter your email">
+                <br>
+                <button class="primary-btn">Subscribe</button>
+            </div>
+        </section>
+    </footer>
+    <!-- Footer end -->
 </body>
 </html>
